# calculate

./: .gitignore  Cargo.toml  Config.toml  Dockerfile  build.rs
.github/workflows/: rust.yml
config/: default.toml
grpcurl/: commands.http
proto/: indicators.proto
src/: config.rs  error.rs  main.rs  settings.rs
src/.github/workflows/: rust.yml
src/grpc/: indicator_service.rs  mod.rs  types.rs
src/indicators/: bollinger_bands.rs  exponential_moving_average.rs  max_drawdown.rs  max_drawup.rs  maximum.rs  mean_absolute_deviation.rs  minimum.rs  rate_of_change.rs  relative_strength_index.rs  simple_moving_average.rs  standard_deviation.rs
src/pattern/: cross_gc_dc.rs  cs_bullish_engulfing.rs  mod.rs
