[package]
name = "calculate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.36", features = ["full"] } 
chrono = { version = "0.4.35"}
prost ="0.12"
tonic-reflection = "0.11"
tonic = "0.11"
tracing = "0.1"# for our async runtime
tracing-subscriber = "0.3"
tower = { version = "0.4.13", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
strum_macros = "0.26"



[build-dependencies]
tonic-build ="0.11"