[package]
name = "calculate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.48", features = ["full"] }
config = "0.15.19"
chrono = { version = "0.4.40" }
prost = "0.14.1"
tonic-prost = "0.14.1"
tonic-reflection = "0.14.1"
tonic = "0.14.1"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower = { version = "0.5.2", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
strum_macros = "0.27.2"


[build-dependencies]
tonic-prost-build = "0.14.1"
